<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="90dp"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Vi">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/vitamin_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif"
        android:text="@string/title_one"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:autoSizeTextType="uniform"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/vitamin_desc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif"
        android:justificationMode="inter_word"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:autoSizeTextType="uniform"
        tools:targetApi="o" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/vitamin_benefits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif"
        android:text="@string/title_two"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:autoSizeTextType="uniform"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/vitamin_benefits_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif"
        android:justificationMode="inter_word"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:autoSizeTextType="uniform"
        tools:targetApi="o" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/vitamin_sources"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif"
        android:text="@string/title_three"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:autoSizeTextType="uniform"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/vitamin_sources_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif"
        android:justificationMode="inter_word"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:autoSizeTextType="uniform"
        tools:targetApi="o" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/vitamin_risk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif"
        android:text="@string/title_four"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:autoSizeTextType="uniform"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/vitamin_risk_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif"
        android:justificationMode="inter_word"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:autoSizeTextType="uniform"
        tools:targetApi="o" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/vitamin_ref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif"
        android:text="@string/title_five"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:autoSizeTextType="uniform"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/vitamin_ref_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif"
        android:textColor="@color/colorPrimary"
        android:justificationMode="inter_word"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:autoSizeTextType="uniform"
        tools:targetApi="o" />

</LinearLayout>
</ScrollView>